--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "dev": "NODE_ENV = development nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "env": {
+    "NODE_ENV": "development"
   },
   "author": "appinventiv",
   "license": "ISC",
