--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "moment": "^2.22.1",
     "mongoose": "^5.1.0",
     "mongoose-double": "0.0.1",
+    "nodemailer": "^4.6.7",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^1.17.4",
     "randomstring": "^1.1.5",
     "swagger-jsdoc": "^1.9.7",
